Fix column alignment

--- a/frontend/src/app/event/event-page/event-page.component.css
+++ b/frontend/src/app/event/event-page/event-page.component.css
@@ -68,7 +68,7 @@
   bottom: 24px;
   top: 170px;
   width: 548px;
-  height: 72vh;
+  height: 73vh;
 }
 
 @media only screen and (max-width: 1100px) {
